** Added height: 100% style into file field file inputs (fixes height issues on ie)

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/muikku-file-field-component.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/muikku-file-field-component.scss
@@ -88,6 +88,7 @@
   right: 0px;
   bottom: 0px;
   cursor: pointer;
+  height: 100%;
 }
 
 .muikku-file-input-field-file-uploader-container input[type="file"][disabled="disabled"] {
